# ShaderEditor

./: .gitignore  AGENTS.md  README.md  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
app/: build.gradle  build.gradle.kts
app/src/main/java/de/markusfisch/android/shadereditor/activity/: MainActivity.java  ParcelableEngineError.java  PreviewActivity.java
app/src/main/java/de/markusfisch/android/shadereditor/adapter/: ErrorAdapter.java  PresetUniformAdapter.java  SamplesAdapter.java  ShaderAdapter.java
app/src/main/res/layout/: activity_main.xml  activity_preview.xml
app/src/main/res/raw/: sample_back_camera_portal.glsl  sample_feedback_fluid.glsl  sample_front_camera_ghost.glsl  sample_sensorium.glsl  sample_signal_skyline.glsl
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
docs-site/: SCREENSHOTS.md
docs-site/src/content/walkthroughs/advanced/: 02-sensorium.md
docs-site/src/content/walkthroughs/backbuffer/: 04-feedback-fluid.md
docs-site/src/content/walkthroughs/camera/: 03-signal-skyline.md  04-back-camera-portal.md  05-front-camera-ghost.md
docs-site/src/layouts/: Base.astro
gradle/: libs.versions.toml
rust/: Cargo.toml
rust/src/: lib.rs
rust/tree-sitter-comment/queries/: highlights.scm
rust/tree-sitter-glsl/queries/: highlights.scm  injections.scm  locals.scm
(+173 files in other folders)
