[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust"
crate_type = ["cdylib"]


[profile.release]
opt-level = 3
overflow-checks = false
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
tree-sitter-highlight = "0.20.1"
tree-sitter-glsl = "0.1.4"
tree-sitter-comment = "0.1.0"
unicode-segmentation = "1.10.1"